prestashop/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prestashop
  namespace: prestashop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prestashop
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prestashop
    spec:
      containers:
        - image: prestashop/prestashop:8
          name: prestashop
          volumeMounts:
            - name: prestashop-pv
              mountPath: /var/www/html
      volumes:
        - name: prestashop-pv
          persistentVolumeClaim:
            claimName: ps-pv-claim
