prestashop/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prestashop
  namespace: prestashop
spec:
  selector:
    app: prestashop
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
